Finishing up working chat app